--- a/others/My_contacts.html
+++ b/others/My_contacts.html
@@ -1,18 +1,18 @@
 <h1>My Contacts</h1>
 <ul>
   <li>
-    <h3>
+    <p>
       Address - <br />
       Ward no.:21 <br />
       495 ,Saraswati Nagar<br />
       Rasuliya (Narmadapuram) <br />
-    </h3>
+    </p>
   </li>
   <li>
-    <h3>Mobile No.:7470733769</h3>
+    <p>Mobile No.:7470733769<p>
   </li>
   <li>
-    <h3>Gmail : ygour@gmail.com</h3>
+    <p>Gmail : ygour@gmail.com<p>
   </li>
 </ul>
 
