--- a/others/My_contacts.html
+++ b/others/My_contacts.html
@@ -12,7 +12,7 @@
     <p>Mobile No.:7470733769<p>
   </li>
   <li>
-    <p>Gmail : ygour@gmail.com<p>
+    <p>Gmail : ygour@gmail.com</p>
   </li>
 </ul>
 
